update handling of element content, remove '@@@' wildcard silliness